# bevy-game

./: .editorconfig  Cargo.toml  bevy_game.code-workspace  build.sh
.cargo/: config.toml
src/: main.rs  setup.rs
src/bevy_tutorial/: camera.rs  enamy.rs  enamy_movement.rs  enemy.rs  enemy_hit.rs  exit_game.rs  mod.rs  player.rs  player_hit.rs  player_hit_enemy.rs  player_hit_star.rs  player_movement.rs  score.rs  star.rs  star_hit.rs
src/bevy_tutorial/enemy/: enemy_movement.rs  mod.rs
src/bevy_tutorial/player/: mod.rs  player_hit_enemy.rs  player_hit_star.rs
src/bevy_tutorial/star/: mod.rs  star.rs
src/breakout/: collider.rs  mod.rs  wall_bundle.rs
src/catan/: camera.rs  catan.rs  circle.rs  main_catan.rs  map_tile.rs  mod.rs  mouse_controls.rs  orbit_camera.rs  pan_orbit_camera.rs  tile.rs  tile_type.rs
src/catan/cubic_coords/: cube_coordinates.rs
src/catan/input/: mouse.rs
src/catan/polygon/: circle.rs  quad.rs
src/catan/utils/: vec.rs
src/catan/world/: city.rs  city_tile.rs  f32_cmp.rs  hex_tile.rs  land_tile.rs  map.rs  mod.rs  randomize_richness.rs  randomize_tiles.rs  road_tile.rs  spawn_map.rs  spawn_map_2.rs  spawn_tiles.rs  vec3_cmp.rs  vec3_utils.rs  water_tile.rs
src/catan/world/city/: city.rs  city_placer_mesh.rs  city_tile.rs  mod.rs  spawn_cities.rs
src/catan/world/road/: mod.rs  road_placer_mesh.rs  road_tile.rs
src/common/: cube_coordinates.rs  mod.rs  scoreboard.rs  wall_location.rs
src/hex/: gizmos_system.rs  hex.rs  map.rs  mod.rs  poligon.rs  polygon.rs
